envoy/config/envoy.yaml
     static_resources:
       listeners:
       - address:
           socket_address: { address: 0.0.0.0, port_value: 10000 }
         filter_chains:
         - filters:
           - name: envoy.filters.network.http_connection_manager
             typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
               codec_type: AUTO
               stat_prefix: ingress_http
               route_config:
                 name: local_route
                 virtual_hosts:
                 - name: backend
                   domains: ["*"]
                   routes:
                   - match: { prefix: "/" }
                     route: { cluster: backend_service }
               http_filters:
               - name: envoy.filters.http.router
       clusters:
       - name: backend_service
         connect_timeout: 0.25s
         type: STRICT_DNS
         lb_policy: ROUND_ROBIN
         load_assignment:
           cluster_name: backend_service
           endpoints:
           - lb_endpoints:
             - endpoint:
                 address:
                   socket_address: { address: backend_service, port_value: 80 }
